PROJECT(main)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FILE(GLOB SRC_LIST_CPP "${PROJECT_SOURCE_DIR}/src/*.cpp")
FILE(GLOB SRC_LIST_C "${PROJECT_SOURCE_DIR}/src/*.c")

MESSAGE(STATUS "src_list:" ${SRC_LIST_CPP} ${SRC_LIST_C})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)

ADD_LIBRARY(lcom SHARED ${SRC_LIST_CPP} ${SRC_LIST_C})

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
include_directories(src)
include_directories(include)
add_subdirectory(src)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(main ${DIR_SRCS})
TARGET_LINK_LIBRARIES( main  lcom ucom pthread)
